--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "MDisk Unlimited Link Convertor Bot",
+    "name": "MDisk Unlimited Link Convertor Bot Powerd By @AM_ROBOTS",
     "description": "High Speed ⚡",
     "keywords": [
         "telegram",
